--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<p><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></p>
-<p><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">Aula 1</a></p>
-<p><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">Aula 2</a></p>
+<h1><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></h1>
+<h2><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">Aula 1 - Estrutura HTML</a></h2>
+<h2><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">Aula 2 - Tags e Atributos</a></h2>
+<h2><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">Aula 3 - table e list</a></h2>
+<h2><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">Aula 4 - External, Internal e Inline com CSS</a></h2>
 
 
