--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <ol>
   <li><a style="background-color:Beige" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">Estrutura HTML</a></li>
   <li><a style="background-color:BlanchedAlmond" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">Tags e Atributos</a></li>
-  <li><a style="background-color:Beige" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">table e list</a></li>
+  <li><a style="background-color:Beige" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">Table e List</a></li>
   <li><a style="background-color:BlanchedAlmond" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">External, Internal e Inline com CSS</a></li>
   <li></li>
   <li></li>
