--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Tecnologia 2024</title>
+<style>
+body  {background-color:Black;}
+</style>
+
+</head>
+<body>
+
 <h1 style="background-color:Aquamarine"><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></h1>
 
 <ol>
@@ -11,6 +22,6 @@
   <li></li>
 </ol> 
 
-
-
+</body>
+</html>
 
