--- a/index.html
+++ b/index.html
@@ -3,24 +3,54 @@
 <head>
 <title>Tecnologia 2024</title>
 <style>
-body  {background-color:Black;}
+body  {background-color: powderblue;}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: rgb(230, 230, 230);
+}  
+tr:nth-child(odd) {
+  background-color: rgb(240, 240, 240);
+}
 </style>
+
+  
 
 </head>
 <body>
+<table>
+<h1 style="background-color:rgb(200, 200, 200)"><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></h1>
+</table>
+  
+<table>
+  <tr>
+    <th>Aulas</th>
+  </tr>
+  <tr>
+    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">1.Estrutura HTML</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">2.Tags e Atributos</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">3.Table e List</a></td>
+  </tr>
+  <tr>
+    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">4.External, Internal e Inline com CSS</a></td>
+  </tr>
+</table>
 
-<h1 style="background-color:Aquamarine"><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></h1>
-
-<ol>
-  <li><a style="background-color:Beige" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">Estrutura HTML</a></li>
-  <li><a style="background-color:BlanchedAlmond" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">Tags e Atributos</a></li>
-  <li><a style="background-color:Beige" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">Table e List</a></li>
-  <li><a style="background-color:BlanchedAlmond" href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">External, Internal e Inline com CSS</a></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
-</ol> 
 
 </body>
 </html>
