--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ tr:nth-child(odd) {
 </table>
 
 <br>
-<img src="qrcode.png" alt="qrcode">
+<img src="qrcode.png" alt="qrcode" width="250" height="250">
 
 </body>
 </html>
