--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <title>Tecnologia 2024</title>
 <style>
-body  {background-color: powderblue;}
+body  {
+   background-color: powderblue;
+   width:400px;
+}
 
 table {
   font-family: arial, sans-serif;
@@ -52,7 +55,7 @@ tr:nth-child(odd) {
 </table>
 
 <br>
-<img src="qrcode.png" alt="qrcode" width="250" height="250">
+<img src="qrcode.png" style="text-align: center;" alt="qrcode" width="250" height="250">
 
 </body>
 </html>
