--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ tr:nth-child(odd) {
 </table>
 
 <br>
-<img src="qrcode.png" style="text-align: center;" alt="qrcode" width="250" height="250">
+<div style="text-align: center;"><img src="qrcode.png" alt="qrcode" width="250" height="250"></div>
 
 </body>
 </html>
