--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <style>
 body  {
    background-color: powderblue;
-   width:400px;
+   max-width: 400px;
 }
+
 
 table {
   font-family: arial, sans-serif;
