--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@ tr:nth-child(odd) {
 </table>
 
 <br>
-<div style="text-align: center;"><img src="qrcode.png" alt="qrcode" width="250" height="250"></div>
+<p>QR code para o site:</p>
+<div style="text-align: center;">
+   <img src="qrcode.png" alt="qrcode" width="250" height="250">
+</div>
 
 </body>
 </html>
