--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ tr:nth-child(odd) {
 </table>
 
 <br>
-<p>QR code para o site:</p>
 <div style="text-align: center;">
-   <img src="qrcode.png" alt="qrcode" width="250" height="250">
+<p>QRCode para o site:</p>
+<img src="qrcode.png" alt="qrcode" width="250" height="250">
 </div>
 
 </body>
