--- a/index.html
+++ b/index.html
@@ -1,66 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<title>Tecnologia 2024</title>
-<style>
-body  {
-   background-color: powderblue;
-   max-width: 400px;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tecnologia 2024</title>
+    <style>
+        body {
+            background-color: powderblue;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            box-sizing: border-box;
+        }
 
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+            margin: 20px 0;
+        }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+        tr:nth-child(even) {
+            background-color: rgb(230, 230, 230);
+        }
 
-tr:nth-child(even) {
-  background-color: rgb(230, 230, 230);
-}  
-tr:nth-child(odd) {
-  background-color: rgb(240, 240, 240);
-}
-</style>
+        tr:nth-child(odd) {
+            background-color: rgb(240, 240, 240);
+        }
 
-  
+        h1 {
+            background-color: rgb(200, 200, 200);
+            text-align: center;
+            padding: 10px;
+            margin: 0;
+            font-size: 1.5em;
+        }
 
+        .qr-code {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .qr-code img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        @media screen and (max-width: 600px) {
+            table {
+                width: 100%;
+                margin: 10px 0;
+            }
+
+            h1 {
+                font-size: 1.2em;
+                padding: 8px;
+            }
+        }
+    </style>
 </head>
 <body>
-<table>
-<h1 style="background-color:rgb(200, 200, 200)"><a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing">Material</a></h1>
-</table>
-  
-<table>
-  <tr>
-    <th>Aulas</th>
-  </tr>
-  <tr>
-    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">1.Estrutura HTML</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">2.Tags e Atributos</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">3.Table e List</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">4.External, Internal e Inline com CSS</a></td>
-  </tr>
-</table>
+    <table>
+        <tr>
+            <th colspan="1">
+                <h1>
+                    <a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing" style="text-decoration: none; color: black;">
+                        Material
+                    </a>
+                </h1>
+            </th>
+        </tr>
+    </table>
 
-<br>
-<div style="text-align: center;">
-<p>QRCode para o site:</p>
-<img src="qrcode.png" alt="qrcode" width="250" height="250">
-</div>
+    <table>
+        <tr>
+            <th>Aulas</th>
+        </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZweNM">1. Estrutura HTML</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBRMpq">2. Tags e Atributos</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJMBrN">3. Table e List</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">4. External, Internal e Inline com CSS</a></td>
+        </tr>
+    </table>
 
+    <div class="qr-code">
+        <p>QRCode para o site:</p>
+        <img src="qrcode.png" alt="qrcode">
+    </div>
 </body>
 </html>
-
