--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         <tr>
             <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/mdZBjGy">4. External, Internal e Inline com CSS</a></td>
         </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/XWLZMJe">5. Classes e Id com CSS</a></td>
+        </tr>
     </table>
 
     <div class="qr-code">
