--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
 
         .qr-code img {
-            max-width: 50%;
+            max-width: 400px;
             height: auto;
         }
 
@@ -96,6 +96,9 @@
         </tr>
         <tr>
             <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/XWLZMJe">5. Classes e Id com CSS</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/oNrEZoV">5. Div e Box Model</a></td>
         </tr>
     </table>
 
