--- a/index.html
+++ b/index.html
@@ -98,7 +98,13 @@
             <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/XWLZMJe">5. Classes e Id com CSS</a></td>
         </tr>
         <tr>
-            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/oNrEZoV">5. Div e Box Model</a></td>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/oNrEZoV">6. Div e Box Model</a></td>
+        </tr>
+        <tr>
+            <td><a href="">7. Javascript Básico</a></td>
+        </tr>
+        <tr>
+            <td><a href="ex8.html">8. Site Online</a></td>
         </tr>
     </table>
 
