--- a/ex8.html
+++ b/ex8.html
@@ -79,17 +79,40 @@
     </table>
 
     <table>
+        
         <tr>
-            <th>Aulas</th>
+            <td>
+                <p><b>Exercício da aula 8:</b> </p>   
+ <p> 1.Digite o seguinte comando no Chatgpt:<br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i></p> 
+
+
+<p>2.Teste no <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
+
+<p>3.Crie um repositório no github</p> 
+
+<p>4.Adicione um arquivo chamado index.html no seu repositório (Atenção: index tem que ser minúsculo!)</p> 
+
+<p>5.Ative a página nas configurações e em seguida em Pages do seu repositório.
+Caso tenha dúvidas nessa parte, esses tutoriais podem te ajudar:<a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Tutorial</a></p> 
+
+<p>Exemplos para Html: <a href="https://www.w3schools.com/html/html_examples.asp" target="_blank">Html</a> 
+</p> 
+
+<p>Exemplos para CSS <a href="https://www.w3schools.com/css/css_examples.asp" target="_blank">CSS</a>
+</p> 
+
+<p>Exemplos para JS <a href="https://www.w3schools.com/js/js_examples.asp" target="_blank">JS</a>
+</p> 
+
+ 
+            </td>
         </tr>
-        <tr>
-            <td><a href="index.html">8. Site Online</a></td>
+      
+<tr>
+            <td><div style="text-align:center"><a href="index.html">CLIQUE AQUI PARA VOLTAR</a></div></td>
         </tr>
     </table>
 
-    <div class="qr-code">
-        <p>QRCode para o site:</p>
-        <img src="qrcode.png" alt="qrcode">
-    </div>
+
 </body>
 </html>
