--- a/ex8.html
+++ b/ex8.html
@@ -82,26 +82,26 @@
         
         <tr>
             <td>
-                <p><b>Exercício da aula 8:</b> </p>   
- <p> 1.Digite o seguinte comando no Chatgpt:<br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i></p> 
+                <p><b> Exercício da aula 8:</b> </p>   
+ <p> 1. Digite o seguinte comando no Chatgpt:<br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i><br> Caso não tenha acesso ao gpt, qualquer exemplo seu ou nos links abaixos.</p> 
 
 
-<p>2.Teste no <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
+<p> 2. Teste no site: <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
 
-<p>3.Crie um repositório no github</p> 
+<p> 3. Crie um repositório público no github.</p> 
 
-<p>4.Adicione um arquivo chamado index.html no seu repositório (Atenção: index tem que ser minúsculo!)</p> 
+<p> 4. Adicione um arquivo chamado <i>index.html</i>i no seu repositório. (Atenção: index.html tem que ser minúsculo!)</p> 
 
-<p>5.Ative a página nas configurações e em seguida em Pages do seu repositório.
-Caso tenha dúvidas nessa parte, esses tutoriais podem te ajudar:<a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Tutorial</a></p> 
+<p> 5. Ative a página online, vá em <i>Settings</i> do seu repositório, e em seguida na aba <i>Pages</i>, na seção <i>Branch</i> selecione o item <i>main</i>. Espere alguns minutos, de <i>refresh</i> na página, e entre no link.<br>
+Caso tenha dúvidas nessa parte, esses vídeos tutoriais podem te ajudar: <a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Vídeos Tutoriais</a></p> 
 
-<p>Exemplos para Html: <a href="https://www.w3schools.com/html/html_examples.asp" target="_blank">Html</a> 
+<p> Exemplos para Html: <a href="https://www.w3schools.com/html/html_examples.asp" target="_blank">Html</a> 
 </p> 
 
-<p>Exemplos para CSS <a href="https://www.w3schools.com/css/css_examples.asp" target="_blank">CSS</a>
+<p> Exemplos para CSS <a href="https://www.w3schools.com/css/css_examples.asp" target="_blank">CSS</a>
 </p> 
 
-<p>Exemplos para JS <a href="https://www.w3schools.com/js/js_examples.asp" target="_blank">JS</a>
+<p> Exemplos para Javascript: <a href="https://www.w3schools.com/js/js_examples.asp" target="_blank">JS</a>
 </p> 
 
  
