--- a/ex8.html
+++ b/ex8.html
@@ -93,7 +93,7 @@
 <p> 4. Adicione um arquivo chamado <i>index.html</i>i no seu repositório. (Atenção: index.html tem que ser minúsculo!)</p> 
 
 <p> 5. Ative a página online acessando o item <i>Settings</i> do seu repositório. E em seguida, vá até a aba <i>Pages</i>, e na seção <i>Branch</i>, selecione o item <i>main</i>. Aguarde alguns minutos, atualize a página, e acesse o link fornecido.<br>
-Se tiver dúvidas, estes vídeos tutoriais podem ser úteis: <a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Vídeos Tutoriais</a></p> 
+Se tiver dúvidas, estes vídeos podem ser úteis: <a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Vídeos Tutoriais</a></p> 
 
 <p> Exemplos para Html: <a href="https://www.w3schools.com/html/html_examples.asp" target="_blank">Html</a> 
 </p> 
