--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/oNrEZoV">6. Div e Box Model</a></td>
         </tr>
         <tr>
-            <td><a href="">7. Javascript Básico</a></td>
+            <td><a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/JjQpNWj">7. Javascript Básico</a></td>
         </tr>
         <tr>
             <td><a href="ex8.html">8. Site Online</a></td>
