--- a/ex8.html
+++ b/ex8.html
@@ -83,7 +83,7 @@
         <tr>
             <td>
                 <p><b> Exercício da aula 8:</b> </p>   
- <p> 1. Digite o seguinte comando no Chatgpt:<br><br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i><br><br> Caso não tenha acesso ao Chatgpt, pegue qualquer exemplo seu ou nos links abaixos.</p> 
+ <p> 1. Digite o seguinte comando no Chatgpt:<br><br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i><br><br> Caso não tenha acesso ao Chatgpt, pegue qualquer exemplo seu, ou nos links abaixos, ou use esse exemplo feito no Chatgpt <a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBdWrv" target="_blank">Pc-Man</a>.</p> 
 
 
 <p> 2. Teste no site: <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
