--- a/ex8.html
+++ b/ex8.html
@@ -74,16 +74,16 @@
         <tr>
             <td>
                 <p><b> Exercício da aula 8:</b> </p>   
- <p> 1. Digite o seguinte comando no Chatgpt:<br><br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i><br><br> Caso não tenha acesso ao Chatgpt, pegue qualquer exemplo seu, ou nos links abaixos, ou use esse exemplo feito no Chatgpt <a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBdWrv" target="_blank">Pc-Man</a>.</p> 
+ <p> <b>1.</b> Digite o seguinte comando no Chatgpt:<br><br> <i>Crie um jogo de pac-man em html, CSS e Javascript em um só arquivo html. Com botões de movimento para ser responsivo em celulares com touch screen.</i><br><br> Caso não tenha acesso ao Chatgpt, pegue qualquer exemplo seu, ou nos links abaixos, ou use esse exemplo feito no Chatgpt <a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/dyBdWrv" target="_blank">Pc-Man</a>.</p> 
 
 
-<p> 2. Teste no site: <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
+<p> <b>2.</b> Teste no site: <a href="https://codepen.io/pen/" target="_blank">https://codepen.io/pen/</a></p> 
 
-<p> 3. Crie um repositório público no github.</p> 
+<p> <b>3.</b> Crie um repositório público no github.</p> 
 
-<p> 4. Adicione um arquivo chamado <i>index.html</i>i no seu repositório. (Atenção: index.html tem que ser minúsculo!)</p> 
+<p> <b>4.</b> Adicione um arquivo chamado <i>index.html</i>i no seu repositório. (Atenção: index.html tem que ser minúsculo!)</p> 
 
-<p> 5. Ative a página online acessando o item <i>Settings</i> do seu repositório. E em seguida, vá até a aba <i>Pages</i>, e na seção <i>Branch</i>, selecione o item <i>main</i>. Aguarde alguns minutos, atualize a página, e acesse o link fornecido.<br>
+<p> <b>5.</b> Ative a página online acessando o item <i>Settings</i> do seu repositório. E em seguida, vá até a aba <i>Pages</i>, e na seção <i>Branch</i>, selecione o item <i>main</i>. Aguarde alguns minutos, atualize a página, e acesse o link fornecido.<br>
 Se tiver dúvidas, estes vídeos podem ser úteis: <a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Vídeos Tutoriais</a></p> 
 
 <p> Exemplos para Html: <a href="https://www.w3schools.com/html/html_examples.asp" target="_blank">Html</a> 
