--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
         <tr>
             <td><a href="ex8.html">8. Site Online</a></td>
         </tr>
+        <tr>
+            <td><a href="proj1.html">9. Projeto 1</a></td>
+        </tr>
+        <tr>
+            <td><a href="proj2.html">8. Projeto 2</a></td>
+        </tr>
     </table>
 
     <div class="qr-code">
