--- a/proj1.html
+++ b/proj1.html
@@ -81,7 +81,7 @@
               <p> <b>2.</b> Edite os arquivos "<b>index.html</b>" e "<b>style.css</b>" para deixar única sua página. .</p>
               <p>Dica: Você pode usar o <a href="https://codepen.io/FABIO-LOFREDO-CESAR/pen/VwJEZVG" target="_blank">Codepen.io</a> para visualizar suas alterações. <u>LEMBRE-SE DE ALTERAR NO GITHUB TODA ALTERAÇÃO!</u> </p>
       
-  <p> <b>3.</b> Coloque sua página online como no exercício 8, <a href="ex8.html" target="_blank">Colocar seu Site Online</a></p>
+  <p> <b>3.</b> Coloque sua página online como no exercício 8, <a href="ex8.html" target="_blank">Colocar seu Site Online</a>.</p>
   
  <p> <b>4.</b> Entregue seu projeto no Alura! Vá no curso "Página Web: criando um catálogo de vídeos com HTML e CSS", em seguida selecione o item "08. Finalização e publicação", após isso entregue o link do site em "Envio de Link" </a></p>
   <p>Dica: Poste o link da sua página online, mas em último caso, se tiver problemas, pode postar o link do seu repositório</p>
