--- a/ex8.html
+++ b/ex8.html
@@ -81,7 +81,7 @@
 
 <p> <b>3.</b> Crie um repositório público no github.</p> 
 
-<p> <b>4.</b> Adicione um arquivo chamado <i>index.html</i>i no seu repositório. (Atenção: index.html tem que ser minúsculo!)</p> 
+<p> <b>4.</b> Adicione um arquivo chamado <i>index.html</i> no seu repositório. <u>Atenção: index.html deve ser minúsculo!</u></p> 
 
 <p> <b>5.</b> Ative a página online acessando o item <i>Settings</i> do seu repositório. E em seguida, vá até a aba <i>Pages</i>, e na seção <i>Branch</i>, selecione o item <i>main</i>. Aguarde alguns minutos, atualize a página, e acesse o link fornecido.<br>
 Se tiver dúvidas, estes vídeos podem ser úteis: <a href="https://www.youtube.com/playlist?list=PL_s0tIostGzGB6WlLy1j-Yo8kdfjMeRU1" target="_blank">Vídeos Tutoriais</a></p> 
