--- a/proj2.html
+++ b/proj2.html
@@ -84,7 +84,7 @@
       
   <p> <b>3.</b> Coloque sua página online como no exercício 8, <a href="ex8.html" target="_blank">Colocar seu Site Online</a>.</p>
   
- <p> <b>4.</b> Entregue seu projeto no Alura! Vá no curso "Algoritmos: criando uma aventura com HTML, CSS e JavaScript", em seguida selecione o item "08. Compartilhando nossa aventura", após isso entregue o link do site em "Envio de Link" </a></p>
+ <p> <b>4.</b> Entregue seu projeto no Alura! Vá no curso <b>"Algoritmos: criando uma aventura com HTML, CSS e JavaScript"</b>, em seguida selecione o item <b>"08. Compartilhando nossa aventura"</b>, após isso entregue o link do site em <b>"Envio de Link"</b> </a></p>
   <p>Dica: Poste o link da sua página online, mas em último caso, se tiver problemas, pode postar o link do seu repositório</p>
   <p>Mostre para o professor e recebe sua nota!</p>
   
