--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <tr>
             <th colspan="1">
                 <h1>
-                    <a href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing" style="text-decoration: none; color: black;">
+                    <a target="_blank" href="https://docs.google.com/document/d/1VJZxJLMi0xmHFlV-6FY-HG0HNNZ6XxndfPFA7X0l_rM/edit?usp=sharing" style="text-decoration: none; color: black;">
                         Material
                     </a>
                 </h1>
@@ -113,7 +113,11 @@
             <td><a href="proj2.html">10. Projeto 2</a></td>
         </tr>
     </table>
-
+    <table>
+      <tr>
+        <th><a target="_blank" href="https://dazai67.github.io/levantesi/">Site desenvolvido pela aluna Rebeca Levantesi</h>
+      </tr>
+    </table>
     <div class="qr-code">
         <p>QRCode para o site:</p>
         <img src="qrcode.png" alt="qrcode">
