--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@
         <td><a href="https://www.onlinegdb.com/" target="_blank">GDB</a></td>
       </tr>
       <tr>
-        <td><a href="https://editor.p5js.org/" target="_blank">p5js</a></td>
+        <td><a href="https://editor.p5js.org/" target="_blank">P5js</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://scratch.mit.edu/" target="_blank">Scratch</a></td>
       </tr>
 
     </table>
@@ -151,7 +154,10 @@
         <td><a href="https://www.onlinegdb.com/" target="_blank">GDB</a></td>
       </tr>
       <tr>
-        <td><a href="https://editor.p5js.org/" target="_blank">p5js</a></td>
+        <td><a href="https://editor.p5js.org/" target="_blank">P5js</a></td>
+      </tr>
+      <tr>
+        <td><a href="https://github.com/" target="_blank">Github</a></td>
       </tr>
 
     </table>
