--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <button id="button4" onclick="show4bim()">4°Bim</button>
   </div>
 
-  <div id="1bim">
+  <div id="1bim" style="display:none;">
     <table>
       <tr>
         <th><a target="_blank" href="https://docs.google.com/document/d/1wUpkQaYiIR82LGpoZja_RlX5O_gJ6RngWyGGe45jOzA/edit?usp=sharing" style="font-size:30px;">
@@ -136,7 +136,7 @@
     </table>
 
   </div>
-  <div id="2bim">
+  <div id="2bim" style="display:none;">
     <table>
       <tr>
         <th><a target="_blank" href="https://docs.google.com/document/d/1wUpkQaYiIR82LGpoZja_RlX5O_gJ6RngWyGGe45jOzA/edit?usp=sharing" style="font-size:30px;">
@@ -162,7 +162,7 @@
 
     </table>
   </div>
-  <div id="3bim">
+  <div id="3bim" style="display:none;">
 
     <table>
       <tr>
@@ -218,7 +218,7 @@
     </table>
   </div>
 
-  <div id="4bim">
+  <div  id="4bim" style="display:none;">
     <table>
       <tr>
         <th>Aulas</th>
