--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </table>
   </div>
 
-  <div  id="4bim" style="display:none;">
+  <div id="4bim" style="display:none;">
     <table>
       <tr>
         <th>Aulas</th>
@@ -228,7 +228,11 @@
           <iframe id="docsintroducao4bim" style="display:none ;height:200px; width: 100%;" src="https://docs.google.com/document/d/1xsKQ7oxbKqfBJF-pKf5CJ3ovcYUiRJr8I5Z2WE33-zQ/pub?embedded=true"></iframe>
         </td>
       </tr>
+      <tr>
+        <td><a href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a><br>
 
+        </td>
+      </tr>
     </table>
   </div>
 
