--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </td>
       </tr>
       <tr>
-        <td><a href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a><br>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a><br>
 
         </td>
       </tr>
