--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
       </tr>
       <tr>
         <td><a href="#" onclick="introducao4bim()">1. Introdução</a><br>
-          <iframe id="docsintroducao4bim" style="display:none ;height:200px; width: 100%;" src="https://docs.google.com/document/d/1xsKQ7oxbKqfBJF-pKf5CJ3ovcYUiRJr8I5Z2WE33-zQ/pub?embedded=true"></iframe>
+          <div id="docsintroducao4bim" style="display:none;text-align: center;"><iframe style="height:200px; width: 100%;max-width:800px" src="https://docs.google.com/document/d/1xsKQ7oxbKqfBJF-pKf5CJ3ovcYUiRJr8I5Z2WE33-zQ/pub?embedded=true"></iframe>
+            <hr>
+            <iframe width="800" height="450" src="https://www.youtube.com/embed/MTdiRlQEsU8" title="tec aula1 4bim" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
         </td>
       </tr>
       <tr>
