--- a/index.html
+++ b/index.html
@@ -232,9 +232,36 @@
         </td>
       </tr>
       <tr>
-        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a><br>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a>
 
         </td>
+
+      </tr>
+      <tr>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1UwWuwG17Wg23WSYoDn4d9_CfnZbpZnsCtl68TNyO9gU/edit?usp=sharing">3. Formatação Condicional, Congelar e Esconder.</a>
+
+        </td>
+
+      </tr>
+
+      </tr>
+      <tr>
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1YzZVQfkiDdSDVYCJvKnDxA6RI30CMakrj4niKe1weyY/edit?usp=sharing">4. Mesclar, Ordenar, Fórmulas e Condicional.</a>
+
+        </td>
+
+      </tr>
+          <tr>
+        <td><a href="#">5. Em construção</a>
+
+        </td>
+
+      </tr>
+          <tr>
+        <td><a href="#">6. Em construção</a>
+
+        </td>
+
       </tr>
     </table>
   </div>
