--- a/proj4bim.html
+++ b/proj4bim.html
@@ -84,9 +84,9 @@
         <p>4. Entregue seu projeto conforme a imagem abaixo:</p>
 <img src="projetos_alura.jpg">
 <br>
-        <a href="" target="_blank">Projeto 3</a></p>
-    <a href="" target="_blank">Projeto 4</a></p>
-  <a href="" target="_blank">Projeto 5</a></p>
+        <a href="https://github.com/fabiolofredo/domba-projeto3-2024" target="_blank">Projeto 3</a></p>
+    <a href="https://github.com/fabiolofredo/domba-projeto4-2024" target="_blank">Projeto 4</a></p>
+  <a href="https://github.com/fabiolofredo/domba-projeto5-2024" target="_blank">Projeto 5</a></p>
 
       </td>
     </tr>
