--- a/index.html
+++ b/index.html
@@ -220,9 +220,18 @@
 
   <div id="4bim" style="display:none;">
     <table>
+
+      <tr>
+        <th><a href="proj4bim.html">Projetos</a></th>
+      </tr>
+    </table>
+
+    <table>
+
       <tr>
         <th>Aulas</th>
       </tr>
+
       <tr>
         <td><a href="#" onclick="introducao4bim()">1. Introdução</a><br>
           <div id="docsintroducao4bim" style="display:none;text-align: center;"><iframe style="height:300px; width: 100%;max-width:800px" src="https://docs.google.com/document/d/1xsKQ7oxbKqfBJF-pKf5CJ3ovcYUiRJr8I5Z2WE33-zQ/pub?embedded=true"></iframe>
@@ -231,38 +240,27 @@
           </div>
         </td>
       </tr>
+
       <tr>
-        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a>
-
-        </td>
-
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1VajruOEUP49hlZdbSCFe9OqoB0eGSDQ4IPx5B_gtUao/edit?usp=sharing">2. Formatação e Fórmulas Básicas</a> </td>
       </tr>
+
       <tr>
-        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1UwWuwG17Wg23WSYoDn4d9_CfnZbpZnsCtl68TNyO9gU/edit?usp=sharing">3. Formatação Condicional, Congelar e Esconder.</a>
-
-        </td>
-
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1UwWuwG17Wg23WSYoDn4d9_CfnZbpZnsCtl68TNyO9gU/edit?usp=sharing">3. Formatação Condicional, Congelar e Esconder.</a> </td>
       </tr>
 
-      </tr>
       <tr>
-        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1YzZVQfkiDdSDVYCJvKnDxA6RI30CMakrj4niKe1weyY/edit?usp=sharing">4. Mesclar, Ordenar, Fórmulas e Condicional.</a>
-
-        </td>
-
+        <td><a target="_blank" href="https://docs.google.com/spreadsheets/d/1YzZVQfkiDdSDVYCJvKnDxA6RI30CMakrj4niKe1weyY/edit?usp=sharing">4. Mesclar, Ordenar, Fórmulas e Condicional.</a> </td>
       </tr>
-          <tr>
-        <td><a href="#">5. Em construção</a>
 
-        </td>
-
+      <tr>
+        <td><a href="#">5. Em construção</a> </td>
       </tr>
-          <tr>
-        <td><a href="#">6. Em construção</a>
 
-        </td>
-
+      <tr>
+        <td><a href="#">6. Em construção</a> </td>
       </tr>
+
     </table>
   </div>
 
@@ -326,7 +324,7 @@
   }
   // Função que será executada ao carregar a página
   function iniciar() {
-    show3bim();
+    //show3bim();
   }
   window.onload = iniciar;
 </script>
